# aura-snowflake-playground

./: .env.example  .gitignore  pyproject.toml
notebooks/: 01_create_connection.ipynb  02_hello_cortex.ipynb  03_load_dummy_data.ipynb  04_staff_admin_agent.ipynb  05_cortex_search_test.ipynb  06_cortex_agent_test.py  07_cortex_search_and_custom_tools.ipynb
src/: config.py
src/data/: dummy_data_generator.py  enhanced_dummy_data_generator.py
src/utils/: snowflake_helper.py
